# CompilerDesign-Project2

./: .pre-commit-config.yaml  Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
resources/test/: assembly-1.txt  irassignment.txt  ll1invalid-1.txt  ll1valid-1.txt
src/: codegen.rs  evaluation.rs  lib.rs  main.rs
src/codegen/: code_file.rs  symbol_table.rs
src/evaluation/: symbol_table.rs
src/parser/: ast.rs  errors.rs  mod.rs  table.rs
src/parser/ast/: compilation_unit.rs  expression.rs  reductions.rs  statement.rs
src/scanner/: location.rs  mod.rs  tokens.rs
