[package]
name = "compiler_design_project_2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
colored = "2.0.0"
either = "1.6.1"
log = "0.4.14"
peeking_take_while = "1.0.0"
simple_logger = { version = "1.13.0", default-features = false, features = ["colors"] }

[dev-dependencies]
indoc = "1.0.3"
pretty_assertions = "1.0.0"
